==> SFUSatClub/balloon_obc/src/Computing/SDcard.cpp <==
#include <Arduino.h>
#include "SDcard.h"

SDcard::SDcard()
{
CS_PIN = 53;
//File file;
file = new File;

}

//void SDcard::init()
// {
// }

void SDcard::init()
{
  Serial.begin(9600);
  Serial.println("Initializing SD card...");
  pinMode(CS_PIN, OUTPUT);

  if (SD.begin())
  {
    Serial.println("SD card is ready to use.");
  } else
  {
    Serial.println("SD card initialization failed");
    return;
  }
}


int SDcard::createFile(char filename[])
{
  file = SD.open(filename, FILE_WRITE);

  if (file)
  {
    Serial.println("File created successfully.");
    return 1;
  } else
  {
    Serial.println("Error while creating file.");
    return 0;
  }
}



int SDcard::writeToFile(char text[])
{
  if (file)
  {
    file.println(text);
    Serial.println("Writing to file: ");
    Serial.println(text);
    return 1;
  } else
  {
    Serial.println("Couldn't write to file");
    return 0;
  }
}



void SDcard::closeFile()
{
  if (file)
  {
    file.close();
    Serial.println("File closed");
  }
}



int SDcard::openFile(char filename[])
{
  file = SD.open(filename);
  if (file)
  {
    Serial.println("File opened with success!");
    return 1;
  } else
  {
    Serial.println("Error opening file...");
    return 0;
  }
}


String SDcard::readLine()
{
  String received = "";
  char ch;
  while (file.available())
  {
    ch = file.read();
    if (ch == '\n')
    {
      return String(received);
    }
    else
    {
      received += ch;
    }
  }
  return "";
}
